--- a/MicrosoftTeams-config.css
+++ b/MicrosoftTeams-config.css
@@ -1,218 +1,215 @@
 /* MS Teams Theme - Dev */
 @import "https://leeprky.github.io/themes/MicrosoftTeams/master-import.css";
 @import url('https://snappercord.github.io/Settings-Icons/source.css');
+@import url(https://raw.githack.com/mwittrien/BetterDiscordAddons/master/Themes/BlurpleRecolor/BlurpleRecolor.css);
 
-:root {
 
-    /* Gradients */
-    --default-gradient: 315deg, rgba(var(--alt-color), 0.6) 0%, rgba(var(--alt-color), 0.8) 74%;
-    --special-gradient: 315deg, rgba(var(--alt-color), 0.1) 0%, #c987b8 74%;
-    --red-gradient: 315deg, #AA3738 0%, #F04747 74%;
-    --red-hsl: hsl(359, 63%, 53%);
-    --yellow-gradient: 315deg, #c29b1b 0%, #ffa640 74%;
-    --yellow-hsl: hsl(46, 72%, 52%);
-    --green-gradient: 315deg, #507a73 0%, #4b7c72  74%;
-    --grey-gradient: 315deg, rgba(var(--alt-color), 0.6) 0%, rgba(var(--alt-color), 0.8) 74%;
-    --white-gradient: 315deg, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0.342) 74%;
-       
-    /* Transitions */
-    --font-normal: 500;
-    --font-hover: bold;
-    --font-size-hover: 15px;
-    --hover-transition: 0.1s linear;
-    --transform-normal: scale(1);
-    --hover-transform: scale(1.15);
-    --setting-hover-transform: scale(1.025);
-    --button-hover-transform: scale(1.03);
+/*
 
-    --settings-icon-color: var(--alt-color2);
-    --settings-subscriptions: var(--alt-color2);
-    --settings-hypesquad: #fbb848;
-    --settings-logout: #f04747;
- 
-    /* Greenple Colour*/
-    --green-color: var(--alt-color2);
-    --green-color2: var(--alt-color);
-    --green-bar-on: rgba(var(--alt-color), 0.3);
-    --green-bar-bg: var(--green-color);
-    --green-slider-on: var(--green-color);
-    --green-slider-off: rgba(var(--alt-color), 0.4);
-    --green-slider-dot: #fff;
+DARKMODE
 
-    /* Status Colours */
-    --purple: #464775;
-    --red: #B1273E;
-    --call-button-red: #AF243D;
-    --yellow: #FDB913;
-    --green: #92C353;
+*/
 
-    --settings-icon-color: white;
-    --settings-subscriptions: white;
-    --settings-hypesquad: var(--yellow);
-    --settings-logout: var(--red);
-    --settings-alt-focused: white;
-    --settings-guild-premium: #7289da;
-    --settings-guild-delete: var(--red);
+.theme-dark {
 
-    --user-modal-avatar-size: 230px;
-    --blur-the-things: 0;
-    --premium-size: 480px;
-    --premium-opacity: .13;
-    --premium-blur: blur(1.2px)
+  /* Main Colours - Try Keep These The Same */
+  --main-colour: 70, 71, 117; /* RGB ONLY */
+  --main-colour2: #464775; /* HEX ONLY */
+  --main-colour3: 239; /* HSL ONLY */
+
+  /* Green Colours */
+  --green-color: var(--alt-color2); /* HEX ONLY */
+  --green-color2: var(--alt-color); /* RGB ONLY */
+  --green-bar-on: rgba(var(--alt-color), 0.3); /* RGBA ONLY */
+  --green-bar-bg: var(--green-color); /* RGB ONLY */
+  --green-slider-on: var(--green-color); /* RGB ONLY */
+  --green-slider-off: rgba(var(--alt-color), 0.4); /* RGBA ONLY */
+  --green-slider-dot: #fff;
+
+  /* Status/Other Things Colours */
+  --purple: #464775;
+  --red: #B1273E;
+  --call-button-red: #AF243D;
+  --yellow: #FDB913;
+  --green: #92C353;
+
+  /* Header Colours */
+  --headers: #FFFFFF; /* */
+  --headers-secondary: #c7c7c7;
+
+  --chatbox-colour: var(--background-secondary);
+  --mentioned: rgba(var(--alt-color), 0.4);
+  --mentioned-hover: rgba(var(--alt-color), 0.2);
+
+  /* Text Colours */
+  --namesusernames: #F0F0F0;
+  --text: #F0F0F0;
+  --text-positive1: var(--green-color);
+  --muted: #646262;
+  --links: var(--alt-color2);
+  --links-from-self: #989bff;
+  
+  /* Interative Buttons */
+  --button-interactive: #F0F0F0;
+  --button-interactive-hover: #F0F0F0;
+  --button-interactive-active: #fefeff;
+  --button-interactive-muted: #585858;
+
+  /* Backgrounds */
+  --main-background: #1f1f1f ;
+  --main-background-alternative: #111111;
+  --secondary-background: #141414 ;
+  --secondary-background-alternative: #0a0a0a;;
+  --tertiary: #171717;
+  --accent: var(--alt-color2);
+  --floating: #161616;
+
+  /* Hovering Colours */
+  --main-hover: rgba(var(--alt-color), 0.2) ;
+  --main-hover-active: rgba(var(--alt-color), 0.8) ;
+  --main-hover-selected: rgba(var(--alt-color), 0.5) ; 
+  --main-hover-accent: rgba(var(--alt-color), 0.1) ; 
+
+  /* Channel Indicators */
+  --connected: 108, 95, 135; /* RGB ONLY */
+  --hovered: rgba(var(--alt-color), 0.2); /* RGBA ONLY */
+  --unread: 255, 255, 255; /* RGB ONLY */
+  --selected: var(--alt-color); /* RGB ONLY */
+  --rounding: 3px;
+
+  /* Infos */
+  --info-warning: var(--red);
+  --help-warning: var(--red);
+  --help-info: var(--alt-color2);
+  --radio-group-dot: var(--alt-color);
+
+  /* Drop Shadow */
+  --shadow-stroke: 0 0 0 1px rgba(4,4,5,0.15) ;
+  --shadow-low: 0 1px 0 rgba(18, 20, 36, 0.767),0 1.5px 0 rgba(6,6,7,0.05),0 2px 0 rgba(4,4,5,0.05) ;
+  --shadow-medium: 0 4px 4px rgba(0,0,0,0.16) ;
+  --shadow-high: 0 8px 16px rgba(0,0,0,0.24) ;
+
+  /* Scollbars */
+  --scrollbars: flex;
+  --scrollbar-small: #797979;
+  --scrollbar-small-track: transparent;
+  --scrollbar-large-thumb: #797979;
+  --scrollbar-large-track: transparent;
+  --scrollbar-small-scrollbar-color: #6c6c6c;
+  --scrollbar-small-scrollbar-color-track: transparent;
+
+  /* Others */
+
+  /* Modals */
+  --user-modal-avatar-size: 230px;
+  --blur-the-things: 0;
+  --premium-size: 480px;
+  --premium-opacity: .13;
+  --premium-blur: blur(1.2px)
 }
-   
-   .theme-dark {
-   
-      --channeltextarea-background: var(--background-secondary);
-   
-      --alt-color: 70, 71, 117;
-      --alt-color2: #464775;
-      --alt-color3: 239 ;/* HSL */
-      
-      --playing-color: var(--alt-color2) ;
-      --spotify-color: var(--alt-color2);
-      --streaming-color: rgb(127, 50, 179) ;
-      
-       /* Header Colors */
-       --header-primary: #FFFFFF ;
-       --header-secondary: #c7c7c7 ;
-       --channels-headings: var(--alt-color2) ;
-     
-       /* Text Colours */
-       --text-normal: #F0F0F0 ;
-       --text-muted: #B3B3B3 ;
-       --text-link: var(--alt-color2) ;
-       --text-link-self: #989bff ;
-       --channels-default: #dddddd ;
-       --interactive-normal: #F0F0F0 ;
-       --interactive-hover: #F0F0F0 ;
-       --interactive-hover-icons: var(--background-accent2) ;
-       --interactive-active: #fefeff ;
-        --interactive-active-icons: var(--background-accent2) ;
-       --interactive-muted: #585858 ;
-      
-       /* Background Colours */
-       --background-primary: #1f1f1f ;
-       --background-primary-alt: #111111 ;
-       --background-secondary: #141414 ;
-       --background-secondary-alt: #0a0a0a;
-       --background-tertiary: #171717 ;
-       --background-accent: var(--alt-color2) ;
-       --background-floating: #161616 ;
 
-       --indicator-connected: 108, 95, 135;
-       --indicator-hovered: rgba(var(--alt-color), 0.2);
-       --indicator-unread: 255, 255, 255;
-       --indicator-selected: var(--alt-color);
-       --indicator-rounding: 3px !important;
-      
-       /* Mentioned  Colours */
-       --background-mentioned: rgba(var(--alt-color), 0.1) ;
-       --background-mentioned-hover: rgba(var(--alt-color), 0.2) ;
-       --info-warning-foreground: #bdbdbdc5;
-      
-       --background-help-warning: rgba(250,166,26,0.1) ;
-       --background-help-info: rgba(0,176,244,0.1) ;
-      
-       /* Hovering Colours */
-       --background-modifier-hover: rgba(var(--alt-color), 0.2) ;
-       --background-modifier-active: rgba(var(--alt-color), 0.8) ;
-       --background-modifier-selected: rgba(var(--alt-color), 0.5) ; 
-       --background-modifier-accent: rgba(var(--alt-color), 0.1) ;  
-      
-      /* Box Shadow On Floating Elements Colours */
-      --elevation-stroke: 0 0 0 1px rgba(4,4,5,0.15) ;
-      --elevation-low: 0 1px 0 rgba(18, 20, 36, 0.767),0 1.5px 0 rgba(6,6,7,0.05),0 2px 0 rgba(4,4,5,0.05) ;
-      --elevation-medium: 0 4px 4px rgba(0,0,0,0.16) ;
-      --elevation-high: 0 8px 16px rgba(0,0,0,0.24) ;
-      
-      --scrollbar-thin-thumb: #797979;
-      --scrollbar-thin-track: #17171700;
-      --scrollbar-auto-thumb: #797979;
-      --scrollbar-auto-track: #17171700 ;
-      --scrollbar-auto-scrollbar-color-thumb: #6c6c6c ;
-      --scrollbar-auto-scrollbar-color-track: #171717da ;
-          
-      /* Other */
-      --radio-group-dot-foreground: var(--alt-color) ;
-      --text-positive: var(--green-color) !important;
-      }
-   
-    .theme-light {
-    
-      --channeltextarea-background: var(--background-secondary);
-     
-      --alt-color: 118, 120, 187;
-      --alt-color2: #6e71bb ;
-      --alt-color3: 238 ;/* HSL */
-      
-      --playing-color: var(--alt-color2) ;
-      --spotify-color: var(--alt-color2) ;
-      --streaming-color: rgb(127, 50, 179) ;
-      
-       /* Header Colors */
-       --header-primary: #1A1A1A ;
-       --header-secondary: #5E5D5F ;
-       --channels-headings: var(--alt-color2) ;
-     
-       /* Text Colours */
-       --text-normal: #3E3E3E ;
-       --text-muted: #252525 ;
-       --text-link: var(--alt-color2) ;
-       --channels-default: #2e2e2e ;
-       --interactive-normal: #555555 ;
-       --interactive-hover: var(--alt-color2) ;
-       --interactive-hover-icons: var(--alt-color2) ;
-       --interactive-active: var(--alt-color2) ;
-        --interactive-active-icons: var(--alt-color2) ;
-       --interactive-muted: #989898 ;
-      
-       /* Background Colours */
-     --background-primary: #F3F3F3 ; 
-     --background-primary-alt: #F3F3F3 ; 
-     --background-secondary: #EBEBEB ; 
-     --background-secondary-alt: #EBEBEB ; 
-     --background-tertiary: rgba(253, 251, 251, 0.979); 
-     --background-accent: var(--alt-color2) ; 
-     --background-floating: #ffffff ; 
+/*
 
-     --indicator-connected: 108, 95, 135;
-     --indicator-hovered: rgba(var(--alt-color), 0.1);
-     --indicator-unread: 255, 255, 255;
-     --indicator-selected: var(--alt-color);
-     --indicator-rounding: 3px !important;
-      
-       /* Mentioned  Colours */
-       --background-mentioned: #fcfcfc ; 
-       --background-mentioned-hover: #ebebeb ;
-       --info-warning-foreground: #1f1e1ec5;
-      
-       --background-help-warning: rgba(250,166,26,0.1);
-       --background-help-info: rgba(0,176,244,0.1) ;
-      
-       /* Scrollbar Colours */
-       --background-modifier-hover: rgba(var(--alt-color), 0.2) ;
-       --background-modifier-active: rgba(var(--alt-color), 0.6) ;
-       --background-modifier-selected: rgba(var(--alt-color), 0.4) ; 
-       --background-modifier-accent: rgba(var(--alt-color), 0.1) ;  
-      
-      /* Box Shadow On Floating Elements Colours */
-      --elevation-stroke: 0 0 0 1px rgba(4,4,5,0.15) ;
+LIGHTMODE
 
-      --elevation-low: 0 1px 0 rgba(18, 20, 36, 0.767),0 1.5px 0 rgba(6,6,7,0.05),0 2px 0 rgba(4,4,5,0.05);
-      --elevation-medium: 0 4px 4px rgba(0,0,0,0.16) ;
-      --elevation-high: 0 8px 16px rgba(0,0,0,0.24) ;
-      
-      --scrollbar-thin-thumb: #8A8A8A ;
-      --scrollbar-thin-track: #f7f7f700;
-      --scrollbar-auto-thumb: #8A8A8A;
-      --scrollbar-auto-track: #ffffff36 ;
-      --scrollbar-auto-scrollbar-color-thumb: #6c6c6c ;
-      --scrollbar-auto-scrollbar-color-track: #171717da ;
-          
-      /* Other */
-      --radio-group-dot-foreground: var(--alt-color2) ;/* Ignore */
-      --text-positive: var(--green-color) !important;
-      }
+*/
+
+.theme-light {
+
+  /* Main Colours - Try Keep These The Same */
+  --main-colour: 118, 120, 187; /* RGB ONLY */
+  --main-colour2: #6e71bb; /* HEX ONLY */
+  --main-colour3: 238; /* HSL ONLY */
+
+  /* Green Colours */
+  --green-color: var(--alt-color2); /* HEX ONLY */
+  --green-color2: var(--alt-color); /* RGB ONLY */
+  --green-bar-on: rgba(var(--alt-color), 0.3); /* RGBA ONLY */
+  --green-bar-bg: var(--green-color); /* RGB ONLY */
+  --green-slider-on: var(--green-color); /* RGB ONLY */
+  --green-slider-off: rgba(var(--alt-color), 0.4); /* RGBA ONLY */
+  --green-slider-dot: #fff;
+
+  /* Status/Other Things Colours */
+  --purple: #464775;
+  --red: #B1273E;
+  --call-button-red: #AF243D;
+  --yellow: #FDB913;
+  --green: #92C353;
+
+  /* Header Colours */
+  --headers: #1A1A1A; /* */
+  --headers-secondary: #5E5D5F;
+
+  --chatbox-colour: var(--background-secondary);
+  --mentioned: rgba(var(--alt-color), 0.4);
+  --mentioned-hover: rgba(var(--alt-color), 0.2);
+
+  /* Text Colours */
+  --namesusernames: #2e2e2e;
+  --text: #3E3E3E;
+  --text-positive1: var(--green-color);
+  --muted: #252525;
+  --links: var(--alt-color2);
+  --links-from-self: #6365a1;
+  
+  /* Interative Buttons */
+  --button-interactive: #555555;
+  --button-interactive-hover: var(--alt-color2);
+  --button-interactive-active: var(--alt-color2);
+  --button-interactive-muted: #989898;
+
+  /* Backgrounds */
+  --main-background: #F3F3F3; 
+  --main-background-alternative: #F3F3F3; 
+  --secondary-background: #EBEBEB; 
+  --secondary-background-alternative: #EBEBEB; 
+  --tertiary: rgba(253, 251, 251, 0.979); 
+  --accent: var(--alt-color2);
+  --floating: #ffffff; 
+
+  /* Hovering Colours */
+  --main-hover: rgba(var(--alt-color), 0.2) ;
+  --main-hover-active: rgba(var(--alt-color), 0.6) ;
+  --main-hover-selected: rgba(var(--alt-color), 0.4) ; 
+  --main-hover-accent: rgba(var(--alt-color), 0.1) ; 
+
+  /* Channel Indicators */
+  --connected: 108, 95, 135; /* RGB ONLY */
+  --hovered: rgba(var(--alt-color), 0.1); /* RGBA ONLY */
+  --unread: 255, 255, 255; /* RGB ONLY */
+  --selected: var(--alt-color); /* RGB ONLY */
+  --rounding: 3px;
+
+  /* Infos */
+  --info-warning: var(--red);
+  --help-warning: var(--red);
+  --help-info: var(--alt-color2);
+  --radio-group-dot: var(--alt-color);
+
+  /* Drop Shadow */
+  --shadow-stroke: 0 0 0 1px rgba(4,4,5,0.15) ;
+  --shadow-low: 0 1px 0 rgba(18, 20, 36, 0.767),0 1.5px 0 rgba(6,6,7,0.05),0 2px 0 rgba(4,4,5,0.05) ;
+  --shadow-medium: 0 4px 4px rgba(0,0,0,0.16) ;
+  --shadow-high: 0 8px 16px rgba(0,0,0,0.24) ;
+
+  /* Scollbars */
+  --scrollbars: flex;
+  --scrollbar-small: #8A8A8A ;
+  --scrollbar-small-track: transparent;
+  --scrollbar-large-thumb: #8A8A8A;
+  --scrollbar-large-track: transparent;
+  --scrollbar-small-scrollbar-color: #6c6c6c;
+  --scrollbar-small-scrollbar-color-track: transparent;
+
+  /* Others */
+
+  /* Modals */
+  --user-modal-avatar-size: 230px;
+  --blur-the-things: 0;
+  --premium-size: 480px;
+  --premium-opacity: .13;
+  --premium-blur: blur(1.2px)
+}
 
 :root {--outdated_msteams-005: none !important; --version: "0.0.9 (ALPHA)" !important; --build: "005" !important}
