--- a/MicrosoftTeams-config.css
+++ b/MicrosoftTeams-config.css
@@ -1,11 +1,159 @@
-/* MS Teams Theme - Dev */
-@import "https://leeprky.github.io/themes/MicrosoftTeams/master-import.css";
-@import url('https://snappercord.github.io/Settings-Icons/source.css');
+/* 
+░▒█▀▄▀█░░▀░░█▀▄░█▀▀▄░▄▀▀▄░█▀▀░▄▀▀▄░█▀▀░▀█▀░░░▀▀█▀▀░█▀▀░█▀▀▄░█▀▄▀█░█▀▀
+░▒█▒█▒█░░█▀░█░░░█▄▄▀░█░░█░▀▀▄░█░░█░█▀░░░█░░░░░▒█░░░█▀▀░█▄▄█░█░▀░█░▀▀▄
+░▒█░░▒█░▀▀▀░▀▀▀░▀░▀▀░░▀▀░░▀▀▀░░▀▀░░▀░░░░▀░░░░░▒█░░░▀▀▀░▀░░▀░▀░░▒▀░▀▀▀
+
+░▒█▀▀▄░▒█░░▒█░░░▒█░░░░▒█▀▀▀░▒█▀▀▀░▒█▀▀█░▒█▀▀▄░▒█░▄▀░▒█░░▒█
+░▒█▀▀▄░▒▀▄▄▄▀░░░▒█░░░░▒█▀▀▀░▒█▀▀▀░▒█▄▄█░▒█▄▄▀░▒█▀▄░░▒▀▄▄▄▀
+░▒█▄▄█░░░▒█░░░░░▒█▄▄█░▒█▄▄▄░▒█▄▄▄░▒█░░░░▒█░▒█░▒█░▒█░░░▒█░░
+*/
 
 /*
+▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
+█▄ ▄██ ▄▀▄ ██ ▄▄ ██ ▄▄▄ ██ ▄▄▀█▄▄ ▄▄
+██ ███ █ █ ██ ▀▀ ██ ███ ██ ▀▀▄███ ██
+█▀ ▀██ ███ ██ █████ ▀▀▀ ██ ██ ███ ██
+▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
+*/
 
-DARKMODE
+@import "https://leeprky.github.io/themes/MicrosoftTeams/master-import.css";
 
+/*
+░▒█▀▀▄░▒█░▒█░▒█▀▀▀█░▀▀█▀▀░▒█▀▀▀█░▒█▀▄▀█░▀█▀░▒█▀▀▀█░█▀▀▄░▀▀█▀▀░▀█▀░▒█▀▀▀█░▒█▄░▒█
+░▒█░░░░▒█░▒█░░▀▀▀▄▄░░▒█░░░▒█░░▒█░▒█▒█▒█░▒█░░░▀▀▀▄▄▒█▄▄█░░▒█░░░▒█░░▒█░░▒█░▒█▒█▒█
+░▒█▄▄▀░░▀▄▄▀░▒█▄▄▄█░░▒█░░░▒█▄▄▄█░▒█░░▒█░▄█▄░▒█▄▄▄█▒█░▒█░░▒█░░░▄█▄░▒█▄▄▄█░▒█░░▀█
+*/
+
+/*
+▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
+██ ▄▄ ██ ████ ▄▄▀██ ▄▄▄ ██ ▄▄▄ ██ ▄▄▀██ ▄▄▄ ██ ▄▄▀██ ▄▄▀
+██ █▀▀██ ████ ▀▀ ██▄▄▄▀▀██▄▄▄▀▀██ █████ ███ ██ ▀▀▄██ ██ 
+██ ▀▀▄██ ▀▀ █ ██ ██ ▀▀▀ ██ ▀▀▀ ██ ▀▀▄██ ▀▀▀ ██ ██ ██ ▀▀ 
+▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
+*/
+
+/* work in progress */
+
+/*
+▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
+██ ▄▄▀██ ▄▄▄ ██ █████ ▄▄▄ ██ ██ ██ ▄▄▀██ ▄▄▄ 
+██ █████ ███ ██ █████ ███ ██ ██ ██ ▀▀▄██▄▄▄▀▀
+██ ▀▀▄██ ▀▀▀ ██ ▀▀ ██ ▀▀▀ ██▄▀▀▄██ ██ ██ ▀▀▀ 
+▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
+*/
+
+/* - GREEN
+:root {
+  --main-colour: 0, 166, 118 !important; 
+  --main-colour2: #00A676 !important; 
+  --main-colour3: 163 !important; 
+}
+*/
+/* - PINK
+:root {
+  --main-colour: 220, 0, 115 !important; 
+  --main-colour2: #DC0073 !important; 
+  --main-colour3: 329 !important; 
+}
+/*
+/* - BLUE
+:root {
+  --main-colour: 0, 161, 228 !important; 
+  --main-colour2: #00A1E4 !important; 
+  --main-colour3: 198 !important; 
+}  
+*/
+/* - ORANGE
+:root {
+  --main-colour: 255, 132, 39 !important; 
+  --main-colour2: #FF8427 !important; 
+  --main-colour3: 26 !important; 
+}
+*/
+/* - YELLOW
+:root {
+  --main-colour: 233, 196, 106!important; 
+  --main-colour2: #e7b945 !important; 
+  --main-colour3: 26 !important; 
+}
+*/
+/* - RED
+:root {
+  --main-colour: 165, 36, 61!important; 
+  --main-colour2: #A5243D !important; 
+  --main-colour3: 348 !important; 
+}
+*/
+/* - CYAN
+:root {
+  --main-colour: 50, 144, 143 !important; 
+  --main-colour2: #32908F !important; 
+  --main-colour3: 179 !important; 
+}
+*/
+/* - PLUM
+:root {
+  --main-colour: 145, 47, 86 !important; 
+  --main-colour2: #912F56 !important; 
+  --main-colour3: 336 !important; 
+}
+*/
+
+/* - BROWN
+:root {
+  --main-colour: 90, 58, 49!important; 
+  --main-colour2: #5A3A31  !important; 
+  --main-colour3: 13 !important; 
+}
+*/
+
+/*
+▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
+█▄▄ ▄▄██ ▄▄▄ ██ ▄▄ ██ ▄▄▀█ ▄▄▀██ ▄▄▀
+███ ████ ███ ██ ▀▀ ██ ▄▄▀█ ▀▀ ██ ▀▀▄
+███ ████ ▀▀▀ ██ █████ ▀▀ █ ██ ██ ██ 
+▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
+remove the /* remove above the import (have none of the options above toggled) and choice between custom or preset schemes..
+*/
+
+/* 
+@import "https://leeprky.github.io/themes/MicrosoftTeams/source/TopBar/main.css";
+:root {
+  --speed: 16s !important
+}
+
+/* Ocean Scheme */
+/* REMOVE
+:root { 
+  --topbar-animation-colour: 124deg, #22577A, #38A3A5, #57CC99, #80ed99, #c7f9cc;
+}
+
+/* Fading Red Scheme */
+/* REMOVE
+:root { 
+  --topbar-animation-colour: 124deg, #800f2f, #a4133c, #c9184a, #ff4d6d, #ff8fa3, #ff4d6d, #c9184a, #a4133c;
+}
+
+/* Red To Blue Scheme */
+/* REMOVE
+:root { 
+  --topbar-animation-colour: 0deg, #b7094c, #a01a58, #892b64, #723c70, #5c4d7d,
+                                   #455e89, #2e6f95, #1780a1, #0091ad, #5c4d7d,
+                                   #723c70, #892b64, #a01a58, #b7094c          ;
+}
+
+ /* CUSTOM COLOUR HERE */ /* DISABLE THE OCEAN PRESET TO ENABLE THIS */
+ /* REMOVE
+ :root { 
+  --topbar-animation-colour: 124deg, red, yellow, green, orange, purple, blue !important;
+}
+
+/*
+▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
+██ ▄▄▀█ ▄▄▀██ ▄▄▀██ █▀▄███▄▄ ▄▄██ ██ ██ ▄▄▄██ ▄▀▄ ██ ▄▄▄
+██ ██ █ ▀▀ ██ ▀▀▄██ ▄▀██████ ████ ▄▄ ██ ▄▄▄██ █ █ ██ ▄▄▄
+██ ▀▀ █ ██ ██ ██ ██ ██ █████ ████ ██ ██ ▀▀▀██ ███ ██ ▀▀▀
+▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 */
 
 .theme-dark {
@@ -106,10 +254,23 @@ DARKMODE
   --premium-blur: blur(1.2px)
 }
 
+
 /*
+▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
+██ ██ █▄ ▄██ ▄▄ ██ ██ ████ ▄▄▀██ ▄▄▄ ██ ▀██ █▄▄ ▄▄██ ▄▄▀█ ▄▄▀██ ▄▄▄ █▄▄ ▄▄
+██ ▄▄ ██ ███ █▀▀██ ▄▄ ████ █████ ███ ██ █ █ ███ ████ ▀▀▄█ ▀▀ ██▄▄▄▀▀███ ██
+██ ██ █▀ ▀██ ▀▀▄██ ██ ████ ▀▀▄██ ▀▀▀ ██ ██▄ ███ ████ ██ █ ██ ██ ▀▀▀ ███ ██
+▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
+*/
 
-LIGHTMODE
+/* work in progress */
 
+/*
+▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
+██ ████▄ ▄██ ▄▄ ██ ██ █▄▄ ▄▄███▄▄ ▄▄██ ██ ██ ▄▄▄██ ▄▀▄ ██ ▄▄▄
+██ █████ ███ █▀▀██ ▄▄ ███ ███████ ████ ▄▄ ██ ▄▄▄██ █ █ ██ ▄▄▄
+██ ▀▀ █▀ ▀██ ▀▀▄██ ██ ███ ███████ ████ ██ ██ ▀▀▀██ ███ ██ ▀▀▀
+▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 */
 
 .theme-light {
@@ -210,4 +371,12 @@ LIGHTMODE
   --premium-blur: blur(1.2px)
 }
 
-:root {--outdated_msteams-005: none !important; --version: "0.0.9 (ALPHA)" !important; --build: "005" !important}
+/*
+▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
+██ ███ ██ ▄▄▄██ ▄▄▀██ ▄▄▄ █▄ ▄██ ▄▄▄ ██ ▀██ 
+███ █ ███ ▄▄▄██ ▀▀▄██▄▄▄▀▀██ ███ ███ ██ █ █ 
+███▄▀▄███ ▀▀▀██ ██ ██ ▀▀▀ █▀ ▀██ ▀▀▀ ██ ██▄ 
+▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
+*/
+
+:root {--outdated_msteams-006: none !important; --version: "0.1.0 (ALPHA)" !important; --build: "006" !important}
