--- a/MicrosoftTeams-config.css
+++ b/MicrosoftTeams-config.css
@@ -379,4 +379,4 @@ remove the /* remove above the import (have none of the options above toggled) a
 ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 */
 
-:root {--outdated_msteams-006: none !important; --version: "0.1.0 (ALPHA)" !important; --build: "006" !important}
+:root {--outdated_msteams-006: none !important; --version: "0.1.0" !important; --build: "006" !important}
