--- a/source/support/betterdiscord/MicrosftsoftTeams.theme.css
+++ b/source/support/betterdiscord/MicrosftsoftTeams.theme.css
@@ -10,7 +10,8 @@
  * @donate https://www.paypal.com/paypalme/leeparkinson22
  * @website https://leeprky.github.io/
 */
-/* 
+
+/*
 ░▒█▀▄▀█░░▀░░█▀▄░█▀▀▄░▄▀▀▄░█▀▀░▄▀▀▄░█▀▀░▀█▀░░░▀▀█▀▀░█▀▀░█▀▀▄░█▀▄▀█░█▀▀
 ░▒█▒█▒█░░█▀░█░░░█▄▄▀░█░░█░▀▀▄░█░░█░█▀░░░█░░░░░▒█░░░█▀▀░█▄▄█░█░▀░█░▀▀▄
 ░▒█░░▒█░▀▀▀░▀▀▀░▀░▀▀░░▀▀░░▀▀▀░░▀▀░░▀░░░░▀░░░░░▒█░░░▀▀▀░▀░░▀░▀░░▒▀░▀▀▀
@@ -37,16 +38,6 @@
 */
 
 /*
-▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
-██ ▄▄ ██ ████ ▄▄▀██ ▄▄▄ ██ ▄▄▄ ██ ▄▄▀██ ▄▄▄ ██ ▄▄▀██ ▄▄▀
-██ █▀▀██ ████ ▀▀ ██▄▄▄▀▀██▄▄▄▀▀██ █████ ███ ██ ▀▀▄██ ██ 
-██ ▀▀▄██ ▀▀ █ ██ ██ ▀▀▀ ██ ▀▀▀ ██ ▀▀▄██ ▀▀▀ ██ ██ ██ ▀▀ 
-▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
-*/
-
-/* work in progress */
-
-/*
 ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 ██ ▄▄▀██ ▄▄▄ ██ █████ ▄▄▄ ██ ██ ██ ▄▄▀██ ▄▄▄ 
 ██ █████ ███ ██ █████ ███ ██ ██ ██ ▀▀▄██▄▄▄▀▀
@@ -61,6 +52,7 @@
   --main-colour3: 163 !important; 
 }
 */
+
 /* - PINK
 :root {
   --main-colour: 220, 0, 115 !important; 
@@ -68,6 +60,7 @@
   --main-colour3: 329 !important; 
 }
 /*
+
 /* - BLUE
 :root {
   --main-colour: 0, 161, 228 !important; 
@@ -75,6 +68,7 @@
   --main-colour3: 198 !important; 
 }  
 */
+
 /* - ORANGE
 :root {
   --main-colour: 255, 132, 39 !important; 
@@ -82,6 +76,7 @@
   --main-colour3: 26 !important; 
 }
 */
+
 /* - YELLOW
 :root {
   --main-colour: 233, 196, 106!important; 
@@ -89,6 +84,7 @@
   --main-colour3: 26 !important; 
 }
 */
+
 /* - RED
 :root {
   --main-colour: 165, 36, 61!important; 
@@ -96,6 +92,7 @@
   --main-colour3: 348 !important; 
 }
 */
+
 /* - CYAN
 :root {
   --main-colour: 50, 144, 143 !important; 
@@ -103,6 +100,7 @@
   --main-colour3: 179 !important; 
 }
 */
+
 /* - PLUM
 :root {
   --main-colour: 145, 47, 86 !important; 
@@ -128,7 +126,7 @@
 remove the /* remove above the import (have none of the options above toggled) and choice between custom or preset schemes..
 */
 
-/* 
+/*
 @import "https://leeprky.github.io/themes/MicrosoftTeams/source/TopBar/main.css";
 :root {
   --speed: 16s !important
@@ -147,15 +145,16 @@ remove the /* remove above the import (have none of the options above toggled) a
 }
 
 /* Red To Blue Scheme */
-/* REMOVE
+/*
 :root { 
   --topbar-animation-colour: 0deg, #b7094c, #a01a58, #892b64, #723c70, #5c4d7d,
-                                   #455e89, #2e6f95, #1780a1, #0091ad, #5c4d7d,
-                                   #723c70, #892b64, #a01a58, #b7094c          ;
+                                   #455e89, #2e6f95, #1780a1, #0091ad, #1780a1,
+                                   #2e6f95, #455e89, #5c4d7d, #723c70, #892b64,
+                                   #a01a58, #b7094c;
 }
 
- /* CUSTOM COLOUR HERE */ /* DISABLE THE OCEAN PRESET TO ENABLE THIS */
- /* REMOVE
+/* CUSTOM COLOUR HERE */ /* DISABLE THE OCEAN PRESET TO ENABLE THIS */
+/*
  :root { 
   --topbar-animation-colour: 124deg, red, yellow, green, orange, purple, blue !important;
 }
@@ -391,4 +390,4 @@ remove the /* remove above the import (have none of the options above toggled) a
 ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 */
 
-:root {--outdated_msteams-006: none !important; --version: "0.1.0 (BD NOT SUPPORTED YET)" !important; --build: "006" !important}
+:root {--outdated_msteams-006: none !important; --version: "0.1.0 (ALPHA)" !important; --build: "006" !important}
