--- a/MicrosoftTeams-config.css
+++ b/MicrosoftTeams-config.css
@@ -192,6 +192,7 @@ remove the /* remove above the import (have none of the options above toggled) a
   --headers-secondary: #c7c7c7;
 
   --chatbox-colour: var(--background-secondary);
+  --messages-colour: #333333;
   --mentioned: rgba(var(--alt-color), 0.4);
   --mentioned-hover: rgba(var(--alt-color), 0.2);
 
@@ -328,6 +329,7 @@ remove the /* remove above the import (have none of the options above toggled) a
   --headers-secondary: #5E5D5F;
 
   --chatbox-colour: var(--background-secondary);
+  --messages-colour: #e9e9e9;
   --mentioned: rgba(var(--alt-color), 0.4);
   --mentioned-hover: rgba(var(--alt-color), 0.2);
 
