--- a/source/support/betterdiscord/MicrosftsoftTeams.theme.css
+++ b/source/support/betterdiscord/MicrosftsoftTeams.theme.css
@@ -424,4 +424,4 @@ remove the /* remove above the import (have none of the options above toggled) a
 ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 */
 
-:root {--outdated_msteams-007: none !important; --version: "0.1.1 (ALPHA)" !important; --build: "007" !important}
+:root {--outdated_msteams-007: none !important; --version: "0.1.1BD (ALPHA)" !important; --build: "007" !important}
