--- a/MicrosoftTeams-config.css
+++ b/MicrosoftTeams-config.css
@@ -428,4 +428,4 @@ remove the /* remove above the import (have none of the options above toggled) a
 ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 */
 
-:root {--outdated_msteams-007: none !important; --version: "0.1.1 (ALPHA)" !important; --build: "007" !important}
+:root {--outdated_msteams-007: none !important; --version: "0.1.1PC (ALPHA)" !important; --build: "007" !important}
