--- a/MicrosoftTeams-config.css
+++ b/MicrosoftTeams-config.css
@@ -56,6 +56,11 @@
 these schemes are to be used standalone - so disadle all other imports!!!
 */
 
+/* Spicetify Default Theme */
+/*@import "https://leeprky.github.io/themes/MicrosoftTeams/source/themes/schemes/spicetify-default.css";
+
+
+/* Based On Other Themes */
 /* Ovel */
 /*@import "https://leeprky.github.io/themes/MicrosoftTeams/source/themes/schemes/ovel-scheme.css";
 
@@ -77,6 +82,7 @@ these schemes are to be used standalone - so disadle all other imports!!!
 /* Duvbox */
 /*@import "https://leeprky.github.io/themes/MicrosoftTeams/source/themes/schemes/duvbox-scheme.css";
 */
+/* 
 
 
 /*
@@ -113,6 +119,7 @@ these schemes are to be used standalone - so disadle all other imports!!!
 
 /* - BROWN */
 /*@import "https://leeprky.github.io/themes/MicrosoftTeams/source/themes/brown,.css";
+
 
 /*
 ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
