--- a/MicrosoftTeams-config.css
+++ b/MicrosoftTeams-config.css
@@ -57,7 +57,7 @@ these schemes are to be used standalone - so disadle all other imports!!!
 */
 
 /* Spicetify Default Theme */
-@import "https://leeprky.github.io/themes/MicrosoftTeams/source/themes/schemes/spicetify-default.css";
+/* @import "https://leeprky.github.io/themes/MicrosoftTeams/source/themes/schemes/spicetify-default.css";
 
 /* */
 /* Based On Other Themes */
